# Tahlk

./: .gitattributes  .gitignore  AUDIT-RESIDUAL-RISK.md  GETTING_STARTED.md  MANAGED-KEY-PROXY-CONTRACT.md  MANAGED-KEY-ROLLOUT.md  README.md  SETUP.md  package-lock.json  package.json  solo.html  vite.config.js
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: BETA_SETUP.md  RELEASE.md
docs/adr/: 0001-freeze-group-tier-and-sync.md  0002-revert-ui-component-kit.md  0003-disable-baa-gate-for-beta.md  0004-first-open-authentication.md  0005-privacy-deletion-rights.md  0006-enforce-baa-gate-managed-key.md
docs/compliance/: 42-cfr-part-2-scope-determination.md  ftc-health-breach-notification-rule-scope-determination.md
docs/security/: data-flow-and-security-controls.md  hipaa-risk-assessment.md  incident-response-runbook.md  pre-deploy-checklist.md
scripts/: check_log_phi.sh
server/: .env.example  Cargo.toml  README.md  package.json
server/migrations/: 0001_init.sql
server/prisma/: schema.prisma
server/src/: anthropic_proxy.rs  api.rs  auth.rs  cache.rs  config.rs  db.ts  devices.rs  error.rs  index.ts  issuer.rs  main.rs  model.rs  store.rs
server/src/plugins/: auth.ts
server/src/routes/: account.ts  auth.ts  billing.ts  encounters.ts  org.ts  sync.ts
server/src/services/: billingService.ts  emailService.ts  s3Service.ts  syncService.ts
server/src/utils/: crypto.ts
src/: entry-group.js  entry-solo.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_crypto.rs  audit_mac.rs  audit_tip.rs  auth.rs  baa.rs  config_audit.rs  crypto.rs  db.rs  db_key.rs  destruction_log.rs  device.rs  encounters.rs  errors.rs  export.rs  hex.rs  keychain.rs  kv.rs  kv_ops.rs  lib.rs  llm_audit.rs  lock.rs  log_safety.rs  main.rs  note_audit.rs  note_history.rs  notes.rs  patient_audit.rs  patients.rs  perms.rs  retention.rs  secrets.rs  throttle.rs  time.rs  whisper.rs
src-tauri/src/providers/: anthropic.rs  mod.rs
src/core/: api.js  auditLog.js  auth.js  capabilities.js  crypto.js  eventBus.js  idleLock.js  storageBackend.js  syncEngine.js  telemetry.js
src/data/: authRepo.js  baa.js  encountersRepo.js  keys.js  lockRepo.js  patientsRepo.js  retentionRepo.js  secretsRepo.js
src/domain/: historyChain.js  llmAuditDrift.js  llmProvider.js  noteClaimGroundingGate.js  noteQualityGate.js  recordAccess.js  retention.js  sectionCoverage.js  specialties.js  transcriptionQualityGate.js
src/editor/: noteEditor.js
src/export/: exportFormatter.js  pdfExport.js
src/group/: practicePanel.js  rosterSwitcher.js  rosterSync.js
src/platform/: appError.js  modal.js  tauri.js
src/scribe/: codingFlags.js  noteGenerator.js  recorder.js  transcriber.js
src/solo/: authScreen.js  confirmModal.js  encounterPanel.js  homeScreen.js  icons.js  integrityAlert.js  lockScreen.js  logoSvg.js  onboarding.js  patientPickerModal.js  patients.js  patientsImport.js  patientsView.js  settingsModal.js  soloHeader.js  templatesView.js
src/solo/encounter/: autoChain.js  exportSection.js  index.js  noteSection.js  panel.js  recordingSection.js  template.js  transcriptSection.js
src/templates/: templateLibrary.js
src/templates/data/: crisis-assess.json  med-mgmt.json  podiatry-diabetic-foot-exam.json  podiatry-eval.json  podiatry-followup.json  podiatry-orthotic.json  podiatry-procedure.json  podiatry-routine-foot-care.json  podiatry-wound-care.json  psych-eval.json  soap-generic.json  therapy-progress.json
src/ui/: Button.js  Field.js  display.js  feedback.js  html.js  index.js
src/utils/: contentHash.js  format.js
styles/: solo.css  ui.css
tests/js/: test_auditChainScrubbed.mjs  test_auditLog.mjs  test_autoChain.mjs  test_baa.mjs  test_canonicalHash.mjs  test_clipboardClearOnExit.mjs  test_contentHash.mjs  test_csvInjection.mjs  test_encounterAutoChain.mjs  test_encountersRepoActor.mjs  test_eventBus.mjs  test_exportFormatOptions.mjs  test_exportFormatter.mjs  test_exportSection.mjs  test_homeScreen_newSession.mjs  test_idleLock.mjs  test_integrityAlert.mjs  test_integrityDisplay.mjs  test_llmAuditDrift.mjs  test_lockScreen.mjs  test_modal.mjs  test_noteClaimGroundingGate.mjs  test_noteQualityGate.mjs  test_onboarding.mjs  test_patientsImport.mjs  test_pdfExport.mjs  test_preconditionMessages.mjs  test_privacy_chain_adversarial.mjs  test_privacy_telemetry_egress.mjs  test_recordAccess.mjs  test_recordListLogging.mjs  test_recorder_stopTimeout.mjs  test_recordingLifecycle.mjs  test_recordingSection_nullGuards.mjs  test_sectionCoverage.mjs  test_signoff.mjs  test_signoffDialog.mjs  test_storageBackendRollback.mjs  test_telemetry.mjs  test_templateLibrary.mjs  (+4 more)
