[package]
name = "tahlk-sync"
version = "0.1.0"
edition = "2021"
description = "Tahlk Group-tier sync service — multi-tenant encounter + audit API"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

# Release-mode optimizations for the sync server. Same `lto`/`codegen-units`/
# `strip` combo as the desktop crate — meaningful bin-size + throughput wins.
# Deliberately NOT using `panic = "abort"` here: axum/tower handlers rely on
# panic-catching to convert a task panic into a 500 rather than tearing the
# whole process (and every other in-flight request) down. Keep unwinding.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
