[package]
name = "tahlk-sync"
version = "0.1.0"
edition = "2021"
description = "Tahlk Group-tier sync service — multi-tenant encounter + audit API"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
governor = "0.10.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "connection-manager"] }
futures-util = { version = "0.3", default-features = false }
async-stream = "0.3"
bytes = "1"

# Release-mode optimizations for the sync server. Same `lto`/`codegen-units`/
# `strip` combo as the desktop crate — meaningful bin-size + throughput wins.
# Deliberately NOT using `panic = "abort"` here: axum/tower handlers rely on
# panic-catching to convert a task panic into a 500 rather than tearing the
# whole process (and every other in-flight request) down. Keep unwinding.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
