[package]
name = "tahlk"
version = "0.1.0"
description = "Tahlk — ambient AI scribe for behavioral health"
authors = ["Tahlk"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tahlk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bundled SQLCipher — self-contained installer, no system lib needed. The
# `vendored-openssl` half compiles OpenSSL from source so CI/dev builds do not
# need OPENSSL_DIR set on Windows/Linux. Adds ~90s to cold builds; incremental
# builds are unaffected. See db::open_database for keying + at-rest migration.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "serde_json"] }
parking_lot = "0.12"

# CSPRNG for the database encryption key. `getrandom` is already transitive
# via `keyring`/`ring`; naming it here keeps the dependency explicit.
getrandom = "0.2"

# HTTP client for Anthropic API calls and Whisper model download.
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime — Tauri 2.x already uses tokio; this makes it explicit
# for our async commands.
tokio = { version = "1", features = ["full"] }

# Base64 for audio chunk transfers from JS → Rust.
base64 = "0.22"

# Stream utilities for chunked model download.
futures-util = "0.3"

# OS secure store for the Anthropic API key (Windows Credential Manager /
# macOS Keychain / Linux Secret Service) — keeps the key off plaintext disk.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

# Test-only deps. `tempfile` scopes each SQLCipher round-trip test to its
# own directory so parallel `cargo test` runs don't stomp on each other.
[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release-mode optimizations for the desktop binary. `lto = "fat"` collapses
# cross-crate inlining across all deps (SQLCipher, reqwest, tauri) — big wins
# for the SSE hot path in notes.rs. `codegen-units = 1` gives LLVM the whole
# crate at once so it can fold across module boundaries. `strip = "symbols"`
# drops the debug symbol table (~10-20 MiB off the shipped binary; PDBs still
# available in target/release/deps for crash-dump symbolication). `panic =
# "abort"` removes unwinding tables — safe here because the desktop app has
# no `catch_unwind` boundaries; a panic already tears the process down.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

